/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'java-library'
    id 'maven-publish'
    id 'org.springframework.boot' version '3.4.4'
    id "org.sonarqube" version "6.0.1.5171"
    id 'jacoco'
}

group = 'sae.semestre.six'
version = '0.0.1-SNAPSHOT'
description = 'demo'
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    api 'org.springframework.boot:spring-boot-starter-thymeleaf:3.4.4'
    api 'org.springframework.boot:spring-boot-starter-web:3.4.4'
    api 'org.hibernate:hibernate-core:6.5.3.Final'
    api 'org.springframework.boot:spring-boot-starter-mail:3.4.4'
    api 'org.springframework:spring-jdbc:6.2.5'
    api 'org.springframework:spring-orm:6.2.5'
    api 'org.springframework:spring-tx:6.2.5'
    api 'org.springframework.boot:spring-boot-starter-data-jpa:3.4.4'
    api 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    implementation 'org.springframework.boot:spring-boot-starter-mail'
    runtimeOnly 'mysql:mysql-connector-java:8.0.33'

    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.4.4'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mockito:mockito-core:5.10.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.10.0'
    testImplementation 'com.icegreen:greenmail-junit5:2.0.0'
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}

// Configuration JaCoCo
jacoco {
    toolVersion = "0.8.11"
}

jacocoTestReport {
    reports {
        xml.required = true
        html.required = true
    }
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

// SonarQube configuration
sonar {
    properties {
        property "sonar.projectKey", "SAE-S6-Evolution-applicative_SAE-S6-legacy-software"
        property "sonar.organization", "sae-s6-evolution-applicative"
        property "sonar.host.url", "https://sonarcloud.io"
    }
}